--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "numpy>=1.24.3",
     "scikit-learn>=1.3.2",
     "openai>=1.3.7",
+    "requests>=2.31.0",
 ]
 
 [tool.setuptools.packages.find]
