--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ChromaDB
+chroma_data/
+chroma_db/
+*.chroma
+
+# Local environment files
+.env.local
