--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,18 @@ dependencies = [
     "scikit-learn>=1.3.2",
     "openai>=1.3.7",
     "requests>=2.31.0",
+    "mcp>=1.0.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["agentic_memory*"]
 exclude = ["tests*"]
+
+[project.scripts]
+agentic-memory-mcp = "agentic_memory_mcp.server:main"
 
 [project.urls]
 "Homepage" = "https://github.com/agiresearch/A-mem"
